[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broadbind"
version = "0.0.1"
authors = [{ name = "Avery Hill", email = "averyforresthill@gmail.com" }]
description = "Predict catalyst adsorption energies"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SiliconScientist/broad-binding"
"Bug Tracker" = "https://github.com/SiliconScientist/broad-binding/issues"
